<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EduTrak</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="edutrak">eduTrak</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="password_requirements">Password Requirements</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="cancel">Cancel</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="other">Other</string>
    <string name="phone_number">Phone Number</string>
    <string name="university_optional">University (Optional)</string>
    <string name="classsification_optional">Classsification (Optional)</string>
    <string name="middle_initial_optional">Middle Initial (Optional)</string>
    <string name="register">Register</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="no_account">"Don't have an account? "</string>
    <string name="click_on_icon_to_submit_a_pdf_file_to_scan">Click on icon to submit a pdf file to scan</string>
    <string name="please_click_on_the_icon_to_submit_a_pdf_to_scan">Please click on the icon to submit a pdf to scan</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- New Event Titles-->
    <string name="title">Add Title</string>
    <string name="date">Date (mm/dd/yy)</string>
    <string name="time_optional">Time (Optional)</string>
    <string name="description">Add description</string>
    <string name="course_code">Course Number (ex. CSE3310)</string>
    <string name="save">Save</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="manage_notifications">Manage Notifications</string>
    <string name="settings">Settings</string>
    <string name="edit_info">Edit Info</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="disable_notification">Disable Notification</string>
    <string name="notification_enabled">Notification enabled</string>
    <string name="feature">This feature coming soon.</string>
</resources>
