<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".NewEvent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_title_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mm"
            android:hint="@string/title"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp"
            tools:textSize="40sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/course_code_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/event_time_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_event_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_calendar_24"
            android:drawableLeft="@drawable/ic_calendar_24"
            android:drawablePadding="@dimen/my_value"
            android:hint="@string/course_code"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp"
            tools:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_date_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@+id/event_time_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_calendar_24"
            android:drawableLeft="@drawable/ic_calendar_24"
            android:drawablePadding="@dimen/my_value"
            android:hint="@string/date"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp"
            tools:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_time_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="270dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_clock_24"
            android:drawableLeft="@drawable/ic_calendar_24"
            android:drawablePadding="@dimen/my_value"
            android:hint="@string/time_optional"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp"
            tools:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:fontFamily="@font/mm"
            android:textColor="@color/dark_blue_google"
            android:textSize="20dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/save"
            android:fontFamily="@font/mm"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue_google"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="300dp"
        android:layout_height="248dp"
        android:layout_marginTop="275dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="354dp"
            android:layout_height="241dp"
            app:srcCompat="@drawable/offwhitebutton"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="400dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_event_desc"
            android:layout_width="320dp"
            android:layout_height="58dp"
            android:layout_margin="14dp"
            android:background="@null"
            android:drawableStart="@drawable/ic_file_24"
            android:drawableLeft="@drawable/ic_file_24"
            android:drawablePadding="@dimen/my_value"
            android:hint="@string/description"
            android:inputType="textLongMessage"
            tools:textSize="20sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>